--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="overflow-hidden rounded-md">
       <div class="flex flex-col justify-between px-4 py-2 align-middle sm:px-6">
         <div class="flex justify-center">
-          <img src="/profile.png" alt="user photo" width="300" height="300" class=" m-2 w-40 rounded-full" />
+          <img src="profile.png" alt="user photo" width="300" height="300" class=" m-2 w-40 rounded-full" />
         </div>
         <div>
           <h1 class="text-center text-2xl font-bold leading-6 text-gray-900 dark:text-gray-100">
